# sentence-transformers

./: .gitignore  CLAUDE.md  open_provence_baseline_documentation_report.md  open_provence_baseline_files_report.md  open_provence_documentation_report.md  open_provence_evaluation_report.md  pyproject.toml  qat_20260214.md  qat_20260215.md  qat_20260215_v2.md  qat_20260215_v2_improve.md  qat_20260216.md  qat_20260217.md  qat_all_results_summary_20260215.md  qat_spec.md  test_minimal_config_gpu.yaml
docs/: automodel-integration-complete.md  pruning-encoder-loading-guide.md  pruning_automodel_integration.md  ranking_model_export_analysis.md  transformers-compatibility-implementation.md
docs-text-pruner/: dataset-filtering-guide.md  evaluation-results.md  implementation-summary.md  transformers-compatibility-idea.md
log/: model_comparison_results_20250709_123358.json
open_provence/: README.md  __init__.py  crossencoder_wrapper.py  data_collator.py  data_structures.py  encoder.py  evaluation.py  losses.py  modeling_openprovence_encoder.py  runner.py  trainer.py  transformers_compat.py
pruning-config/: jpre-base-full-all-fixed.yaml  jpre-base-full-all.yaml  jpre-base-full-small-en.yaml  jpre-base-full-small-i4.yaml  jpre-base-full-small.yaml  jpre-base-msmarco-ja-small-i4.yaml  jpre-base-msmarco-ja-small.yaml  jpre-xs-full-all-3ep-bs128.yaml  jpre-xs-full-all-en.yaml  jpre-xs-full-all.yaml  jpre-xs-full-small-i4.yaml  jpre-xs-msmarco-ja-full.yaml  jpre-xs-msmarco-ja-minimal-filtered.yaml  jpre-xs-msmarco-ja-minimal.yaml  jpre-xs-msmarco-ja-small-i4.yaml  jpre-xs-msmarco-ja-small-i4reverse.yaml  jpre-xs-msmarco-ja-small.yaml  multi-dataset-filtered-example.yaml  pruning_data_easy_en.json  pruning_data_easy_ja.json  pruning_data_en.json  pruning_data_ja.json  pruning_data_ja_not_similar_query.json  pruning_data_ja_v3.json  ruri-re310m-full-all.yaml  ruri-re310m-full-small-i4.yaml  ruri-re310m-msmarco-ja-full.yaml  ruri-re310m-msmarco-ja-minimal.yaml  ruri-re310m-msmarco-ja-small.yaml  test-keep-first.yaml  test-reverse-sort.yaml
qat_eval_results/: a1_eval_rescore_20260215.json  a1_eval_rescore_20260215.md  a2_quantile_20260215.json  a2_quantile_20260215.md  a_phase_eval_20260215.json  a_phase_eval_20260215.md  final-gooaq-qat-evalonly-evaluator-cal1024-20260213-190953.json  final-gooaq-qat-evalonly-evaluator-cal1024-20260213-190953.md  final-gooaq-qat-evalonly-evaluator-cal1024-binpm1-20260213-191052.json  final-gooaq-qat-evalonly-evaluator-cal1024-binpm1-20260213-191052.md  final-gooaq-qat-evalonly-legacy-20260213-190857.json  final-gooaq-qat-evalonly-legacy-20260213-190857.md  final-gooaq-qat-phaseH-trackA-docsonly-state099-q995-qtrue-offline-20260216-102912.json  final-gooaq-qat-phaseH-trackA-docsonly-state099-q995-qtrue-offline-20260216-102912.md  final-gooaq-qat-step1-roundclip-eval-local-baseline-s42-20260213-211125.json  final-gooaq-qat-step1-roundclip-eval-local-baseline-s42-20260213-211125.md  final-gooaq-qat-step1-roundclip-eval-local-trainB-s42-20260213-211224.json  final-gooaq-qat-step1-roundclip-eval-local-trainB-s42-20260213-211224.md  final-gooaq-qat-step2-docs-only-eval-local-baseline-s42-20260213-211635.json  final-gooaq-qat-step2-docs-only-eval-local-baseline-s42-20260213-211635.md  final-gooaq-qat-step2-docs-only-eval-local-trainB-s42-20260213-211734.json  final-gooaq-qat-step2-docs-only-eval-local-trainB-s42-20260213-211734.md  final-gooaq-qat-step3-rolling-std-eval-local-baseline-s42-20260213-212017.json  final-gooaq-qat-step3-rolling-std-eval-local-baseline-s42-20260213-212017.md  final-gooaq-qat-step3-rolling-std-eval-local-trainB-s42-20260213-212115.json  final-gooaq-qat-step3-rolling-std-eval-local-trainB-s42-20260213-212115.md  final-gooaq-qat-step3e-evaluator-minmax-local-baseline-s42-20260213-212231.json  final-gooaq-qat-step3e-evaluator-minmax-local-baseline-s42-20260213-212231.md  final-gooaq-qat-step3e-evaluator-minmax-local-trainB-s42-20260213-212437.json  final-gooaq-qat-step3e-evaluator-minmax-local-trainB-s42-20260213-212437.md  final-gooaq-qat-step3e-evaluator-rolling-local-baseline-s42-20260213-212333.json  final-gooaq-qat-step3e-evaluator-rolling-local-baseline-s42-20260213-212333.md  final-gooaq-qat-step3e-evaluator-rolling-local-trainB-s42-20260213-212537.json  final-gooaq-qat-step3e-evaluator-rolling-local-trainB-s42-20260213-212537.md  mpnet-base-gooaq-qat-phaseH-300k-bs128-docsonly-state099-q995-qfalse-offline-20260216-101450.json  mpnet-base-gooaq-qat-phaseH-300k-bs128-docsonly-state099-q995-qfalse-offline-20260216-101450.md  mpnet-base-gooaq-qat-phaseI-300k-bs1024-cachedmnrl-baseline-lr16e4-full13-offline-20260216-103820.json  mpnet-base-gooaq-qat-phaseI-300k-bs1024-cachedmnrl-baseline-lr16e4-full13-offline-20260216-103820.md  mpnet-base-gooaq-qat-phaseI-300k-bs1024-cachedmnrl-cachefix-lr16e4-full13-offline-20260216-105539.json  mpnet-base-gooaq-qat-phaseI-300k-bs1024-cachedmnrl-cachefix-lr16e4-full13-offline-20260216-105539.md  (+26 more)
scripts/: analyze_fixed_models.py  analyze_model_distribution.py  analyze_msmarco_f2_scores.py  analyze_neg_issue.py  analyze_pos_neg_separately.py  analyze_pruning_models.py  check_chunk_data_structure.py  check_dataset.py  check_dataset_fields.py  check_dataset_structure.py  check_ja_dataset.py  check_pruning.py  check_reranker_head.py  check_trained_model.py  combine_full_dataset.py  compare_all_models.py  compare_models_full_test.py  compare_old_vs_fixed_models.py  compare_pos_compression.py  create_100k_dataset.py  create_partial_dataset.py  create_partial_dataset_fast.py  create_provence_datasets.py  create_provence_datasets_with_scores.py  create_small_dataset.py  create_standalone_pruning_model.py  debug_chunk_collator.py  debug_chunk_data.py  debug_msmarco_predictions.py  debug_provence_probabilities.py  debug_provence_training.py  debug_pruning_issue.py  debug_pruning_labels.py  debug_tokenizer_structure.py  demo_automodel_usage.py  demo_export_ranking_model.py  demo_pruning_automodel.py  detailed_metrics_analysis.py  eval_test_set_pruning.py  evaluate.py  (+131 more)
sentence_transformers/: __init__.py  (+4 more)
(+148 files in other folders)
