[project]
name = "open-provence"
version = "0.1.0"
description = "Query-dependent text pruning for efficient RAG pipelines"
license = { text = "Apache 2.0" }
readme = "README.md"
authors = [
    { name = "OpenProvence Contributors", email = "contact@example.com" }
]
maintainers = [
    { name = "OpenProvence Contributors", email = "contact@example.com" }
]
requires-python = ">=3.9"
keywords = [
    "Query-dependent pruning",
    "Text pruning",
    "RAG",
    "Retrieval-Augmented Generation",
    "Transformer Networks",
    "PyTorch",
    "NLP",
    "deep learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.41.0,<5.0.0",
    "tqdm",
    "torch>=1.11.0",
    "scikit-learn",
    "scipy",
    "huggingface-hub>=0.20.0",
    "Pillow",
    "typing_extensions>=4.5.0",
    "datasets==2.20.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.1",
    "protobuf>=6.31.1",
    "bunkai>=1.5.7",
    "langdetect>=1.0.9",
    "accelerate>=0.26.0",
    "wandb>=0.21.0",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "streamlit>=1.47.1",
]

[project.urls]
Homepage = "https://github.com/example/open-provence"
Repository = "https://github.com/example/open-provence"


[project.optional-dependencies]
train = ["datasets", "accelerate>=0.20.3"]
sentence-transformers = ["sentence-transformers>=2.0.0"]
dev = ["datasets", "accelerate>=0.20.3", "pre-commit", "pytest", "pytest-cov"]

[project.scripts]
openprovence-train = "open_provence.runner:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["open_provence*"]
namespaces = false

[tool.ruff]
line-length = 119
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# Skip `E731` (do not assign a lambda expression, use a def)
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731"
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
    # Ignore `E402` (import violations) in all examples
    "E402", 
    # Ignore missing required imports
    "I002"
    ]
"docs/**" = [
    # Ignore missing required imports
    "I002"
    ]

[tool.ruff.lint.isort]
known-third-party = ["datasets"]
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--strict-markers -m 'not slow and not custom'"
markers = [
    "slow: marks tests as slow",
    "custom: marks tests for third-party models with custom modules"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

flash-attn = [
    "flash-attn>=2.7.4.post1",
]
